# wgpu-odin

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .sublime-project  CHANGELOG.md  LICENSE  README.md  adapter.odin  adapter_native.odin  bind_group.odin  bind_group_layout.odin  buffer.odin  callbacks.odin  color_blend.odin  command_buffer.odin  command_encoder.odin  compute_pass.odin  compute_pass_native.odin  compute_pipeline.odin  device.odin  device_native.odin  export.odin  features.odin  instance.odin  instance_native.odin  limits.odin  log.odin  odinfmt.json  ols.json  ols.json.example  pipeline_layout.odin  query_set.odin  queue.odin  range.odin  render_bundle.odin  render_bundle_encoder.odin  render_bundle_encoder_native.odin  render_pass.odin  render_pass_native.odin  (+17 more)
bindings/: bindings.odin  bindings_darwin.odin  wgpu.odin  wgpu_darwin.odin  wgpu_native.odin
bindings/lib/: libwgpu_native.a.REMOVED.git-id  libwgpu_native.dylib.REMOVED.git-id  libwgpu_native.so.REMOVED.git-id  wgpu_native.dll.lib
bindings/resources/: webgpu.h  wgpu.h
examples/: Makefile  README.md  build.bat  build.sh  build_win.bat  main.odin
examples/cameras/: arcball_camera.odin  cameera.odin  cameeras.odin  cube.wgsl  wasd_camera.odin
examples/capture/: README.md  capture.odin
examples/clear_color/: README.md  clear_color.odin
examples/clear_screen/: clear_screen.odin
examples/common/: model.odin  resources.odin  types.odin  utils.odin
examples/compute/: README.md  compute.odin  compute.wgsl
examples/coordinate_system/: coordinate_system.odin  coordinate_system.wgsl
examples/cube/: README.md  cube.odin  cube.wgsl  vertex.odin
examples/cube_textured/: cube_textured.odin  cube_textured.wgsl  vertex.odin
examples/cubemap/: README.md  cube.odin  cubemap.odin  cubemap.wgsl
examples/fractal_cube/: cube.odin  fractal_cube.odin  fractal_cube.wgsl
examples/framework/: framework.odin
examples/image_blur/: README.md  blur.wgsl  fullscreen_textured_quad.wgsl  image_blur.odin
examples/imgui/: README.md  imgui_example.odin
examples/info/: README.md  info.odin
examples/instanced_cube/: instanced.wgsl  instanced_cube.odin
examples/learn_wgpu/: README.md
examples/microui/: README.md  microui_example.odin  ui_definition.odin
examples/rotating_cube/: README.md  cube.odin  rotating_cube.odin  rotating_cube.wgsl
examples/rotating_cube_textured/: cube.odin  rotating_cube.wgsl  rotating_cube_textured.odin  rotating_cube_textured.wgsl
examples/simple_compute/: README.md  simple_compute.odin
examples/square/: square.odin  square.wgsl
examples/stencil_triangles/: README.md  stencil_triangles.odin
examples/texture_arrays/: README.md  indexing.wgsl  non_uniform_indexing.wgsl  texture_arrays.odin
examples/textured_cube/: README.md  cube.odin  textured_cube.odin  textured_cube.wgsl
examples/triangle/: README.md  main.odin  surface_darwin.odin  surface_js.odin  surface_linux.odin  surface_windows.odin  triangle.odin  triangle.wgsl  triangle_js.odin  triangle_native.odin
examples/triangle_msaa/: README.md  triangle_msaa.odin
examples/two_cubes/: two_cubes.odin
examples/version/: version.odin
lib/linux-x86_64/: libwgpu_native.so.REMOVED.git-id
lib/macos-x86_64/: libwgpu_native.dylib.REMOVED.git-id
lib/windows-x86_64/: wgpu_native.dll.lib
resources/: odin.js  wgpu.js
utils/application/: app.odin  app_init.odin  app_native.odin  camera.odin  colors.odin  constants.odin  events.odin  frame.odin  gpu.odin  imgui.odin  key.odin  keyboard.odin  keyboard_js.odin  keyboard_native.odin  log.odin  math.odin  mathf.odin  microui.odin  mouse.odin  mouse_js.odin  mouse_native.odin  queue_ext.odin  run.odin  run_js.odin  run_native.odin  (+12 more)
utils/imgui/generator/: CMakeLists.txt  defines.odin  enums.odin  imgui_generator.odin  procedures.odin  structs.odin  typedefs.odin  utils.odin
utils/imgui/generator/assets/: cimgui.cpp  cimgui.h  cimgui.json  dcimgui.cpp  dcimgui.h  dcimgui.json
wgpu/: adapter.odin  adapter_ext.odin  bind_group.odin  bind_group_layout.odin  blend_state.odin  buffer.odin  buffer_ext.odin  command_buffer.odin  command_encoder.odin  compute_pass.odin  compute_pipeline.odin  constants.odin  defaults.odin  device.odin  device_ext.odin  error_handling.odin  extent_3d_ext.odin  features.odin  features_ext.odin  instance.odin  limits.odin  limits_ext.odin  log.odin  pipeline_layout.odin  query_set.odin  queue.odin  range.odin  render_bundle.odin  render_bundle_encoder.odin  render_pass.odin  render_pipeline.odin  sampler.odin  shader_module.odin  string_view.odin  surface.odin  surface_capabilities.odin  texture.odin  texture_descriptor_ext.odin  texture_format.odin  texture_view.odin  (+10 more)
wrapper/: README.md  adapter.odin  adapter_ext.odin  bind_group.odin  bind_group_layout.odin  buffer.odin  buffer_ext.odin  colors.odin  command_buffer.odin  command_encoder.odin  compute_pass.odin  compute_pass_encoder.odin  compute_pipeline.odin  default_limits.odin  defaults.odin  defaults_limits.odin  device.odin  device_utils.odin  error_handling.odin  error_scope.odin  errors.odin  errors_legacy.odin  extent_3d_ext.odin  features_ext.odin  instance.odin  instance_window.odin  limits_ext.odin  log.odin  pipeline_layout.odin  query_set.odin  queue.odin  queue_ext.odin  render_bundle.odin  render_bundle_encoder.odin  render_pass_encoder.odin  render_pipeline.odin  sampler.odin  shader.odin  shader_module.odin  shwap_chain.odin  (+14 more)
(+136 files in other folders)
